fixed description word wrap & fixed update spot error

--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -55,9 +55,8 @@
 }
 
 .spotDescription {
-  max-width: 700px;
-  display: flex;
-
+  word-break: break-all;
+  width: 670px;
 }
 
 
